--- a/CSS/pokemonlista.css
+++ b/CSS/pokemonlista.css
@@ -2,32 +2,74 @@
 .display-poke {
 	display: none;
 	justify-content: center;
+	margin: 1em;
+}
+.display-poke.alt > * {
+	max-width: 18.2em;
 }
 .display-poke.alt {
 	display: grid;
 }
 
-.pokemon-search-div,.display-my-poke > * {
+.pokemon-search-div,.display-my-poke > *, .display-my-reseve-poke > * {
 	display: grid;
 	grid-template-columns: repeat(2, 1fr);
-	border: 2px solid black;
+	border: 2px solid rgba(155, 74, 8, 0.63);
 	margin: 0.5em;
 	padding: 1em;
-	max-width: 80vw;
+	/* max-width: 80%; */
+	/* min-width: 70vw; */
+	background: url(/pokebackground.png);
+	box-shadow: 5px 6px 10px rgb(36, 35, 35);
 	/* justify-content: center; */
+}
+.pokemon-search-div {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	min-width: 13em;
+	max-width: 15em;
+}
+
+.pokemon-search-div h4 {
+	grid-column: span 2;
+	text-align: center;
+}
+.img-edit {
+	background: none;
+	width: 16px;
+}
+img {
+	/* background-color: rgba(121, 74, 4, 0.685); */
+	background: url(/picturebackground-2.png);
+	border-radius: 10%;
+	width: 110px;
+
+	/* grid-column: span 2; */
+}
+button{
+	max-height: 1.5em;
+	max-width: 7em;
+	
+	margin-top: 0.5em;
+	/* justify-content: center; */
+	
 }
 .add-to-team-btn, .remove-from-team-btn {
 	width: 19vw;
 
 }
-@media (min-width: 500px) {
-	.display-poke {
+@media (min-width: 520px) {
+	.display-poke, .display-my-poke, .display-my-reseve-poke {
 		grid-template-columns: repeat(2, 1fr);
-		
 	}
-	.pokemon-search-div {
+
+	.display-my-poke.alt > h4, .display-my-reseve-poke.alt > h4 {
+		grid-column: span 2;
+	}
+	/* .pokemon-search-div {
 		max-width: 50vw;
-	}
+	} */
 
 
 }
