--- a/CSS/style.css
+++ b/CSS/style.css
@@ -2,7 +2,8 @@
 	box-sizing: border-box;
 }
 body {
-	background-color: rgb(210, 219, 228);
+	/* background-color: rgb(210, 219, 228); */
+	background: url(/bodybackground.png);
 	margin: 0;
 	padding: 0;
 	font-family: 'Montserrat', sans-serif;
@@ -19,7 +20,7 @@ body {
 	margin-top: 1em;
 	display: flex;
 	justify-content: space-around;
-	background-color: rgb(209, 184, 45);
+	background-color: rgb(240, 212, 54);
 	/* width: 100vw; */
 	color: rgb(133, 63, 38);
 	font-weight: 600;
@@ -48,7 +49,8 @@ body {
 	border-radius: 100%;
 	width: 1em;
 	height: 1em;
-	margin-left: 3.8vw;
-	margin-top: 1.5vh;
+	left: 48vw; 
+	top: 8.2vh; 
+	position: absolute;
 	
 }
