--- a/CSS/pokemonlista.css
+++ b/CSS/pokemonlista.css
@@ -17,11 +17,9 @@
 	border: 2px solid rgba(155, 74, 8, 0.63);
 	margin: 0.5em;
 	padding: 1em;
-	/* max-width: 80%; */
-	/* min-width: 70vw; */
 	background: url(/pokebackground.png);
 	box-shadow: 5px 6px 10px rgb(36, 35, 35);
-	/* justify-content: center; */
+
 }
 .pokemon-search-div {
 	display: flex;
@@ -30,29 +28,27 @@
 	min-width: 13em;
 	max-width: 15em;
 }
+.pokemon-search-div > p {
+	margin-right: auto;
+	margin-top: 0;
+	
+}
 
-.pokemon-search-div h4 {
-	grid-column: span 2;
-	text-align: center;
-}
-.img-edit {
-	background: none;
-	width: 16px;
-}
+
+
 img {
-	/* background-color: rgba(121, 74, 4, 0.685); */
+
 	background: url(/picturebackground-2.png);
 	border-radius: 10%;
 	width: 110px;
 
-	/* grid-column: span 2; */
+
 }
 button{
 	max-height: 1.5em;
 	max-width: 7em;
+	margin-top: 1em;
 	
-	margin-top: 0.5em;
-	/* justify-content: center; */
 	
 }
 .add-to-team-btn, .remove-from-team-btn {
@@ -64,12 +60,21 @@ button{
 		grid-template-columns: repeat(2, 1fr);
 	}
 
-	.display-my-poke.alt > h4, .display-my-reseve-poke.alt > h4 {
-		grid-column: span 2;
+
+
+}
+@media (min-width: 720px) {
+	.display-poke, .display-my-poke, .display-my-reseve-poke {
+		grid-template-columns: repeat(3, 1fr);
 	}
-	/* .pokemon-search-div {
-		max-width: 50vw;
-	} */
-
-
+}
+@media (min-width: 1100px) {
+	.display-poke, .display-my-poke, .display-my-reseve-poke {
+		grid-template-columns: repeat(4, 1fr);
+	}
+}
+@media (min-width: 1500px) {
+	.display-poke, .display-my-poke, .display-my-reseve-poke {
+		grid-template-columns: repeat(5, 1fr);
+	}
 }
