--- a/CSS/style.css
+++ b/CSS/style.css
@@ -24,6 +24,7 @@ body {
 	/* width: 100vw; */
 	color: rgb(133, 63, 38);
 	font-weight: 600;
+	/* height: 2em; */
 }
 .header > p, .search-btn, .my-team {
 	border: 2px solid rgb(156, 91, 31);
@@ -36,21 +37,28 @@ body {
 	color: rgb(151, 107, 65);
 }
 
-.pokeboll {
-	background: linear-gradient(to bottom, rgb(35, 35, 189) 20%, rgb(0, 0, 0) 50%, rgb(179, 21, 21) 50%);
-	border: 4px solid black;
-	width: 3em;
-	height: 3em;
-	border-radius: 100%;
-}
-.pokeboll > p {
-	background-color: whitesmoke;
-	border: 3px solid black;
-	border-radius: 100%;
-	width: 1em;
-	height: 1em;
-	left: 48vw; 
-	top: 8.2vh; 
+
+.pokeboll-img {
+	background: none;
 	position: absolute;
+	width: 70px; 
+	margin: 0;
+	top: 7vh
+}
+.add-to-team-btn, .remove-from-team-btn {
+	background-color: rgb(240, 212, 54);
+	width: 2em;
+	border-radius: 4em;
+	border: 2px solid rgb(156, 91, 31);
 	
+}
+.remove-from-team-btn:hover,.add-to-team-btn:hover {
+	box-shadow: inset 3px 3px 3px rgb(145, 85, 29)
+}
+
+@media (max-width: 400px){
+	.pokeboll-img{
+		width: 60px;
+		top: 7.5vh;
+	}
 }
