--- a/CSS/myteam.css
+++ b/CSS/myteam.css
@@ -1,16 +1,19 @@
 .display-my-poke, .display-my-reseve-poke {
 	display: none;
+	
 }
 .display-my-poke > * , .display-my-reseve-poke > * {
 	grid-template-columns: 1fr;
+
 }
 .pokemon-search-div > h4 {
-	margin-top: 1em;
+	margin-top: 0.3em;
+	
 }
 
 .display-my-poke.alt, .display-my-reseve-poke.alt {
 	display: grid;
-	justify-content: center;
+	place-items: center;
 	
 }
 .h-team, .h-team-reserve {
@@ -29,8 +32,11 @@
 	background: none;
 	width: 16px;
 	margin-left: 0.3em;
+	margin-bottom: 0em;
 }
-
+.orderCard {
+	font-family: 'Rubik Mono One', monospace;
+}
 .move-element-up, .move-element-down {
 	background: none;
 	border: 0;
@@ -39,24 +45,28 @@
 	background: none;
 	border: 0;
  } 
-.move-element-up {
-	margin-top: -3em;
-	margin-right: 10.5em;
- }
-.move-element-down {
-	margin-right: 10.5em;
- }
+
 .move-element-up::before {
 	content: "↑";
-	font-size: 20px;
-	font-weight: bolder;
+	font-family: 'Rubik Mono One', monospace;
+	font-size: 22px;
  }
   
 .move-element-down::before {
 	content: "↓";
-	font-size: 20px;
-	font-weight: bold;
+	font-family: 'Rubik Mono One', monospace;
+	font-size: 22px;
+	
+}
+.spelare {
+	display: flex;
 }
 .invisible {
 	display: none;
+}
+.varning {
+	background: none;
+	background-color: rgba(165, 42, 42, 0.658);
+	text-align: center;
+	font-weight: 600;
 }
