--- a/CSS/pokemonlista.css
+++ b/CSS/pokemonlista.css
@@ -1,16 +1,16 @@
 
 .display-poke {
 	display: none;
-	justify-content: center;
 	margin: 1em;
+	
 }
 .display-poke.alt > * {
-	max-width: 14.2em;
+	max-width: 17.2em;
 	min-height: 16em;
-	justify-content: center;
 }
 .display-poke.alt {
 	display: grid;
+	place-items: center;
 }
 
 .pokemon-search-div,.display-my-poke > *, .display-my-reseve-poke > * {
@@ -20,6 +20,8 @@
 	margin: 0.5em;
 	padding: 1em;
 	background: url(/pokebackground.png);
+	background-size: cover;
+	background-repeat: no-repeat;
 	border-radius: 2%;
 	box-shadow: 5px 6px 10px rgb(36, 35, 35);
 
@@ -29,20 +31,23 @@
 	flex-direction: column;
 	align-items: center;
 	min-width: 13em;
-	max-width: 15em;
+	max-width: 16em;
+	height: 25em;
+
 	/* text-align: center; */
 }
-.orderCard {
-	margin-right: auto;
-	margin-top: 0;
-	
+.pilOrder {
+	display: flex;
+	flex-direction: row;
+	gap: 1.5em;
+	margin: 0;
 }
 
 
 
 img {
 
-	background: url(/picturebackground-2.png);
+	background: url(/spaceback.png);
 	border-radius: 10%;
 	width: 110px;
 	margin-bottom: 0.5em;
@@ -60,11 +65,18 @@ button{
 	width: 19vw;
 
 }
+.ability-container {
+	background-color: rgba(240, 175, 79, 0.719);
+	padding: 0.3em;
+	border-radius: 5%;
+	min-width: 10em;
+}
 
 .ability {
 	/* text-align: end; */
-	margin: 0.1em;
+	margin: 0.4em;
 }
+
 @media (min-width: 520px) {
 	.display-poke, .display-my-poke, .display-my-reseve-poke {
 		grid-template-columns: repeat(2, 1fr);
