--- a/CSS/pokemonlista.css
+++ b/CSS/pokemonlista.css
@@ -30,15 +30,14 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	min-width: 13em;
-	max-width: 16em;
+	width: 16em;
 	height: 22em;
 
 }
 .display-my-poke > *, .display-my-reseve-poke > * {
 	/* min-width: 13em;
 	max-width: 16em; */
-	height: 25em;
+	height: 26em;
 }
 .pilOrder {
 	display: flex;
@@ -51,7 +50,7 @@
 
 img {
 
-	background: url(/spaceback.png);
+	background: url(./spaceback.png);
 	border-radius: 10%;
 	width: 110px;
 	margin-bottom: 0.5em;
