bakgrund annorlunda länkad

--- a/CSS/pokemonlista.css
+++ b/CSS/pokemonlista.css
@@ -50,7 +50,7 @@
 
 img {
 
-	background: url(./spaceback.png);
+	background: url(../spaceback.png);
 	border-radius: 10%;
 	width: 110px;
 	margin-bottom: 0.5em;
