--- a/CSS/style.css
+++ b/CSS/style.css
@@ -3,7 +3,7 @@
 }
 body {
 	/* background-color: rgb(210, 219, 228); */
-	background: url(./bodybackground.png);
+	background: url(../bodybackground.png);
 	margin: 0;
 	padding: 0;
 	font-family: 'Montserrat', sans-serif;
