--- a/CSS/pokemonlista.css
+++ b/CSS/pokemonlista.css
@@ -61,7 +61,8 @@ button{
 	max-height: 1.5em;
 	max-width: 7em;
 	margin-top: 1em;
-	
+	text-decoration: none;
+	/* color: rgb(133, 63, 38) */
 	
 }
 .add-to-team-btn, .remove-from-team-btn {
